<resources>
    <!-- application name -->
    <string name="app_name">WatchMe</string>

    <!-- splash fragment -->
    <string name="created_by_hari_setiaji">Created by Hari Setiaji</string>
    <string name="everywhere">Everywhere</string>
    <string name="find_your_favorite_movies_or_tv_shows">Find your favorite movies or tv shows</string>
    <string name="from">From</string>
    <string name="from_everywhere">from everywhere</string>
    <string name="percentage">%d %%</string>
    <string name="watch">Watch</string>

    <!-- home fragment -->
    <string name="categories">Categories</string>
    <string name="categories_movies">Movies</string>
    <string name="categories_tv_shows">Tv Shows</string>
    <string name="release">Release: %s</string>
    <string name="filter_image">Image Filters</string>
    <string name="hello_username">Hello, Vinsmoke Sanji</string>
    <string name="menu_movie_favorite">Favorite</string>
    <string name="menus_image">Image Menus</string>
    <string name="poster_image">Poster Image</string>
    <string name="search_hint">Search for a movies in here</string>
    <string name="text_info_in_home">Find your favorite movies or tv shows</string>
    <string name="user_image">User Image</string>

    <!-- detail movie fragment -->
    <string name="add_favorite">Add movie to favorite</string>
    <string name="bookmark_image">Bookmark Image</string>
    <string name="long_text">
        lorem ipsum dolor sit amet. lorem ipsum dolor sit amet. lorem ipsum dolor sit amet. lorem ipsum dolor sit amet. lorem ipsum dolor sit amet. lorem ipsum dolor sit amet. lorem ipsum dolor sit amet. lorem ipsum dolor sit amet. lorem ipsum dolor sit amet. lorem ipsum dolor sit amet. lorem ipsum dolor sit amet. lorem ipsum dolor sit amet. lorem ipsum dolor sit amet. lorem ipsum dolor sit amet. lorem ipsum dolor sit amet. lorem ipsum dolor sit amet. lorem ipsum dolor sit amet. lorem ipsum dolor sit amet. lorem ipsum dolor sit amet. lorem ipsum dolor sit amet.
        lorem ipsum dolor sit amet. lorem ipsum dolor sit amet. lorem ipsum dolor sit amet. lorem ipsum dolor sit amet. lorem ipsum dolor sit amet. lorem ipsum dolor sit amet. lorem ipsum dolor sit amet. lorem ipsum dolor sit amet. lorem ipsum dolor sit amet. lorem ipsum dolor sit amet. lorem ipsum dolor sit amet. lorem ipsum dolor sit amet. lorem ipsum dolor sit amet. lorem ipsum dolor sit amet. lorem ipsum dolor sit amet. lorem ipsum dolor sit amet. lorem ipsum dolor sit amet. lorem ipsum dolor sit amet. lorem ipsum dolor sit amet. lorem ipsum dolor sit amet.
        lorem ipsum dolor sit amet. lorem ipsum dolor sit amet. lorem ipsum dolor sit amet. lorem ipsum dolor sit amet. lorem ipsum dolor sit amet. lorem ipsum dolor sit amet. lorem ipsum dolor sit amet. lorem ipsum dolor sit amet. lorem ipsum dolor sit amet. lorem ipsum dolor sit amet. lorem ipsum dolor sit amet. lorem ipsum dolor sit amet. lorem ipsum dolor sit amet. lorem ipsum dolor sit amet. lorem ipsum dolor sit amet. lorem ipsum dolor sit amet. lorem ipsum dolor sit amet. lorem ipsum dolor sit amet. lorem ipsum dolor sit amet. lorem ipsum dolor sit amet.
    </string>
    <string name="overview">Overview</string>
    <string name="remove_favorite">Remove movie from favorite</string>

    <!-- favorite movie fragment -->
    <string name="favorite">Favorite</string>
    <string name="you_don_t_have_favorite_movie_yet">You don\'t have favorite movie yet</string>
    <string name="add_favorite_movie_on_detail_screen">Add favorite movie on detail screen</string>

    <!-- search movie screen -->
    <string name="movie_not_found">Movie or tv show not found</string>
    <string name="note_this_search_use_local_data_not_api">Note: This search use local data not API</string>
    <string name="waiting_to_search">Waiting to search</string>

    <!-- dummies -->
    <string name="release_dummy">Release: 15–12–2021</string>
    <string name="genre_dummy">Adventure, Thriller, Comedy</string>
    <string name="title_dummy">Marvel\'s: Iron Fist</string>
</resources>